...
        if (newRoute != currentRoute) {
          Navigator.of(context).pushReplacementNamed(newRoute);
        }
      },
      items: [
        BottomNavigationBarItem(
          key: Key('metricsBottomNavigationBarItem'),
          icon: Icon(Icons.bar_chart_rounded),
          label: 'Metrics'
        ),
        BottomNavigationBarItem(
          key: Key('projectLibrariesBottomNavigationBarItem'),
          icon: Icon(Icons.folder_rounded),
          label: 'Project Libraries'
        ),
        BottomNavigationBarItem(
          key: Key('boulderingWallsBottomNavigationBarItem'),
          icon: Icon(Icons.corporate_fare_rounded),
          label: 'Bouldering Walls'
        ),                
      ]
    );
  }
...
